--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   custom_indicator: ^0.0.8
+  # audioplayers: ^2.12.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/g1.jpeg
-  #   - images/a_dot_ham.jpeg
+    - images/waveform-audio.png
+    # - images/waveform-audio2.jpeg
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
