--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # audioplayers: ^5.2.0
+  audioplayers: ^5.2.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -56,7 +56,7 @@ flutter:
     - images/thinking_out_loud.jpeg
     - images/love_in_the_dark.jpeg
     - images/just_the_way_you_are.jpeg
-    # - audio/A Super Nice Japanese Song  Anata no Yoru ga Akeru Made Lyrics.mp3
+    - assets/Ed_Sheeran_Thinking_Out_Loud_Official_Audio.mp3
     # - images/waveform-audio2.jpeg
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
